リネームとテスト修正